// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"example-csv"`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Struct_"`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `2`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `"example-csv"`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `"Struct_"`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `1`;

exports[`dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 9`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"example-csv"`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Struct_"`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `2`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `"example-csv"`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `"Struct_"`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `1`;

exports[`dictionary stream Arrow readBuffers enumerates each batch as an Array of Vectors 9`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`dictionary2 file Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"struct"`;

exports[`dictionary2 file Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Struct_"`;

exports[`dictionary2 file Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `2`;

exports[`dictionary2 file Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `
Array [
  "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
  "Airbus",
  1502880750,
  Float32Array [
    32.45663833618164,
    1.8712350130081177,
  ],
]
`;

exports[`dictionary2 file Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `
Array [
  "50fb46f4-fefa-42c1-919c-0121974cdd00",
  "Boeing",
  1502880750,
  Float32Array [
    38.766666412353516,
    -4.181231498718262,
  ],
]
`;

exports[`multi_dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"struct"`;

exports[`multi_dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Struct_"`;

exports[`multi_dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `2`;

exports[`multi_dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `
Array [
  "a0fb47f9-f8fb-4403-a64a-786d7611f8ef",
  "12345",
  "Airbus",
  1502880750,
  Float32Array [
    32.45663833618164,
    1.8712350130081177,
  ],
]
`;

exports[`multi_dictionary file Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `
Array [
  "50fb46f4-fefa-42c1-919c-0121974cdd00",
  "67890",
  "Boeing",
  1502880750,
  Float32Array [
    38.766666412353516,
    -4.181231498718262,
  ],
]
`;

exports[`multipart count Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"row_count"`;

exports[`multipart count Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Int"`;

exports[`multipart count Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `1`;

exports[`multipart count Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `10000`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"origin_lat"`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"FloatingPoint"`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `5`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `35.393089294433594`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `35.393089294433594`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `35.393089294433594`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `29.533695220947266`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `29.533695220947266`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 9`] = `"origin_lon"`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 10`] = `"FloatingPoint"`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 11`] = `5`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 12`] = `-97.6007308959961`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 13`] = `-97.6007308959961`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 14`] = `-97.6007308959961`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 15`] = `-98.46977996826172`;

exports[`multipart latlong Arrow readBuffers enumerates each batch as an Array of Vectors 16`] = `-98.46977996826172`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"origin_city"`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Utf8"`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `5`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `"Oklahoma City"`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `"Oklahoma City"`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `"Oklahoma City"`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `"San Antonio"`;

exports[`multipart origins Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `"San Antonio"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"foo"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Int"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `5`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `1`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `null`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `3`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `4`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `5`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 9`] = `"bar"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 10`] = `"FloatingPoint"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 11`] = `5`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 12`] = `1`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 13`] = `null`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 14`] = `null`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 15`] = `4`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 16`] = `5`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 17`] = `"baz"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 18`] = `"Utf8"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 19`] = `5`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 20`] = `"aa"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 21`] = `null`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 22`] = `null`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 23`] = `"bbb"`;

exports[`simple file Arrow readBuffers enumerates each batch as an Array of Vectors 24`] = `"cccc"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"foo"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Int"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `5`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `1`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `null`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `3`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `4`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `5`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 9`] = `"bar"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 10`] = `"FloatingPoint"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 11`] = `5`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 12`] = `1`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 13`] = `null`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 14`] = `null`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 15`] = `4`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 16`] = `5`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 17`] = `"baz"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 18`] = `"Utf8"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 19`] = `5`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 20`] = `"aa"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 21`] = `null`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 22`] = `null`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 23`] = `"bbb"`;

exports[`simple stream Arrow readBuffers enumerates each batch as an Array of Vectors 24`] = `"cccc"`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"struct_nullable"`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Struct_"`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `7`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `null`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `null`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 10`] = `null`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 11`] = `"struct_nullable"`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 12`] = `"Struct_"`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 13`] = `10`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 14`] = `null`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 15`] = `
Array [
  null,
  null,
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 16`] = `
Array [
  null,
  null,
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 17`] = `null`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 18`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 19`] = `null`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 20`] = `null`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 21`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 22`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`struct file Arrow readBuffers enumerates each batch as an Array of Vectors 23`] = `
Array [
  null,
  null,
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 1`] = `"struct_nullable"`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 2`] = `"Struct_"`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 3`] = `7`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 4`] = `null`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 8`] = `null`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 10`] = `null`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 11`] = `"struct_nullable"`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 12`] = `"Struct_"`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 13`] = `10`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 14`] = `null`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 15`] = `
Array [
  null,
  null,
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 16`] = `
Array [
  null,
  null,
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 17`] = `null`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 18`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 19`] = `null`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 20`] = `null`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 21`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 22`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`struct stream Arrow readBuffers enumerates each batch as an Array of Vectors 23`] = `
Array [
  null,
  null,
]
`;
